--- a/contact.html
+++ b/contact.html
@@ -3,68 +3,65 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact – IslandVista Tours</title>
-  <meta name="description" content="Premium Mauritius tours, transfers, and experiences with instant booking.">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <title>Contact – mautours</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <script defer src="js/script.js"></script>
-  <script type="application/ld+json">
-  {"@context": "https://schema.org", "@type": "TouristInformationCenter", "name": "IslandVista Tours", "image": "assets/placeholder.png", "address": {"@type": "PostalAddress", "addressCountry": "MU"}, "areaServed": "Mauritius", "sameAs": ["https://www.instagram.com/", "https://www.facebook.com/"], "telephone": "+230 000 0000", "url": "https://example.com"}
-  </script>
 </head>
 <body>
 <header class="topbar">
   <div class="container row between center">
-    <a class="brand" href="index.html"><span class="brand-mark">IslandVista</span> Tours</a>
+    <a class="brand" href="index.html"><span class="brand-mark">mau</span>tours</a>
     <nav class="nav" id="nav">
-      <a href="excursions.html" data-i18n="nav_excursions">Excursions</a>
-      <a href="transfers.html" data-i18n="nav_transfers">Transfers</a>
-      <a href="about.html" data-i18n="nav_about">About</a>
-      <a href="contact.html" class="btn primary" data-i18n="nav_contact">Contact</a>
-      <button class="btn ghost small" id="langToggle" aria-label="Change language">FR</button>
+      <a href="excursions.html">Excursions</a>
+      <a href="transfers.html">Transfers</a>
+      <a href="about.html">About</a>
+      <a href="contact.html" class="btn primary">Contact</a>
+      <button class="btn ghost small" id="langToggle">FR</button>
     </nav>
-    <button class="hamburger" id="hamburger" aria-label="Open menu">☰</button>
+    <button class="hamburger" id="hamburger">☰</button>
   </div>
 </header>
 
 <main class="container section">
-  <h1 data-i18n="ct_title">Contact us</h1>
-  <p class="lead" data-i18n="ct_intro">We reply within minutes during 08:00–20:00 MUT.</p>
-  <form id="contactForm" class="panel">
-    <label data-i18n="label_name">Name</label>
-    <input required name="name">
-    <label>Email</label>
-    <input required type="email" name="email">
-    <label data-i18n="label_message">Message</label>
-    <textarea rows="5" name="message"></textarea>
-    <button class="btn primary" type="submit" data-i18n="btn_send">Send</button>
-    <p id="contactStatus" class="status"></p>
-  </form>
+  <h1>Contact us</h1>
+  <p class="lead">We’re available daily from 08:00–20:00 MUT. Reach us directly on your favourite platform:</p>
+
+  <div class="contact-links">
+    <a href="https://wa.me/2300000000" class="contact-card whatsapp" target="_blank">
+      <img src="assets/whatsapp.png" alt="WhatsApp">
+      <span>Chat on WhatsApp</span>
+    </a>
+    <a href="https://www.instagram.com/yourhandle" class="contact-card insta" target="_blank">
+      <img src="assets/instagram.png" alt="Instagram">
+      <span>Follow on Instagram</span>
+    </a>
+    <a href="https://www.facebook.com/yourpage" class="contact-card fb" target="_blank">
+      <img src="assets/facebook.png" alt="Facebook">
+      <span>Message on Facebook</span>
+    </a>
+  </div>
 </main>
 
 <footer class="footer">
   <div class="container grid-3">
     <div>
-      <div class="brand ft"><span class="brand-mark">IslandVista</span> Tours</div>
-      <p data-i18n="ft_tag">Authentic Mauritius. Seamless booking.</p>
+      <div class="brand ft"><span class="brand-mark">mau</span>tours</div>
+      <p>Authentic Mauritius. Seamless booking.</p>
     </div>
     <div>
-      <h4 data-i18n="ft_links">Links</h4>
+      <h4>Links</h4>
       <ul>
-        <li><a href="excursions.html" data-i18n="nav_excursions">Excursions</a></li>
-        <li><a href="transfers.html" data-i18n="nav_transfers">Transfers</a></li>
-        <li><a href="about.html" data-i18n="nav_about">About</a></li>
+        <li><a href="excursions.html">Excursions</a></li>
+        <li><a href="transfers.html">Transfers</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </div>
     <div>
-      <h4 data-i18n="ft_contact">Contact</h4>
-      <p>Email: hello@example.com<br>Phone: +230 000 0000</p>
-      <a class="btn ghost" href="https://wa.me/2300000000" target="_blank" rel="noopener" data-i18n="ft_whatsapp">Chat on WhatsApp</a>
+      <h4>Social</h4>
+      <p>Stay connected with us on social media.</p>
     </div>
   </div>
-  <div class="sub">© 2025 IslandVista Tours • <a href="#" data-i18n="ft_terms">Terms</a> • <a href="#" data-i18n="ft_privacy">Privacy</a></div>
+  <div class="sub">© 2025 mautours • <a href="#">Terms</a> • <a href="#">Privacy</a></div>
 </footer>
 </body>
 </html>
