--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
   <title>Contact – mautours</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <!-- Font Awesome for social icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 <header class="topbar">
@@ -16,7 +18,6 @@
       <a href="transfers.html">Transfers</a>
       <a href="about.html">About</a>
       <a href="contact.html" class="btn primary">Contact</a>
-      <button class="btn ghost small" id="langToggle">FR</button>
     </nav>
     <button class="hamburger" id="hamburger">☰</button>
   </div>
@@ -24,20 +25,20 @@
 
 <main class="container section">
   <h1>Contact us</h1>
-  <p class="lead">We’re available daily from 08:00–20:00 MUT. Reach us directly on your favourite platform:</p>
+  <p class="lead">Reach us directly on your favourite platform:</p>
 
   <div class="contact-links">
-    <a href="https://wa.me/2300000000" class="contact-card whatsapp" target="_blank">
-      <img src="assets/whatsapp.png" alt="WhatsApp">
-      <span>Chat on WhatsApp</span>
+    <a href="https://wa.me/23057750662" class="contact-card whatsapp" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+      <span>WhatsApp</span>
     </a>
     <a href="https://www.instagram.com/yourhandle" class="contact-card insta" target="_blank">
-      <img src="assets/instagram.png" alt="Instagram">
-      <span>Follow on Instagram</span>
+      <i class="fab fa-instagram"></i>
+      <span>Instagram</span>
     </a>
     <a href="https://www.facebook.com/yourpage" class="contact-card fb" target="_blank">
-      <img src="assets/facebook.png" alt="Facebook">
-      <span>Message on Facebook</span>
+      <i class="fab fa-facebook"></i>
+      <span>Facebook</span>
     </a>
   </div>
 </main>
@@ -58,7 +59,11 @@
     </div>
     <div>
       <h4>Social</h4>
-      <p>Stay connected with us on social media.</p>
+      <div class="social-icons">
+        <a href="https://wa.me/23057750662" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://www.instagram.com/yourhandle" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/yourpage" target="_blank"><i class="fab fa-facebook"></i></a>
+      </div>
     </div>
   </div>
   <div class="sub">© 2025 mautours • <a href="#">Terms</a> • <a href="#">Privacy</a></div>
