--- a/transfers.html
+++ b/transfers.html
@@ -6,7 +6,7 @@
   <title>Transfers – mautours</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <script defer src="js/script.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 <header class="topbar">
@@ -17,7 +17,6 @@
       <a href="transfers.html" class="active">Transfers</a>
       <a href="about.html">About</a>
       <a href="contact.html" class="btn primary">Contact</a>
-      <button class="btn ghost small" id="langToggle">FR</button>
     </nav>
     <button class="hamburger" id="hamburger">☰</button>
   </div>
@@ -70,9 +69,11 @@
     </div>
     <div>
       <h4>Social</h4>
-      <a href="https://wa.me/23057750662" target="_blank">WhatsApp</a><br>
-      <a href="https://www.instagram.com/yourhandle" target="_blank">Instagram</a><br>
-      <a href="https://www.facebook.com/yourpage" target="_blank">Facebook</a>
+      <div class="social-icons">
+        <a href="https://wa.me/23057750662" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://www.instagram.com/yourhandle" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/yourpage" target="_blank"><i class="fab fa-facebook"></i></a>
+      </div>
     </div>
   </div>
   <div class="sub">© 2025 mautours • <a href="#">Terms</a> • <a href="#">Privacy</a></div>
@@ -87,8 +88,7 @@ document.getElementById('transferForm')?.addEventListener('submit', function(e){
   const date = this.date.value;
   const pax = this.pax.value;
 
-  // WhatsApp number (no + sign, just country code + number)
-  const phone = "23057750662";
+  const phone = "23057750662"; // WhatsApp number
   const msg = `Hello, I would like a transfer quotation:%0AFrom: ${from}%0ATo: ${to}%0ADate: ${date}%0APassengers: ${pax}`;
   const url = `https://wa.me/${phone}?text=${msg}`;
 
