--- a/excursions.html
+++ b/excursions.html
@@ -98,5 +98,8 @@ function renderExcursions(){
 }
 renderExcursions();
 </script>
+<script type="module" src="js/firebase-config.js"></script>
+<script type="module" src="js/booking.js"></script>
+
 </body>
 </html>
