--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>About – IslandVista Tours</title>
+  <title>About – mautours</title>
   <meta name="description" content="Premium Mauritius tours, transfers, and experiences with instant booking.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
 <body>
 <header class="topbar">
   <div class="container row between center">
-    <a class="brand" href="index.html"><span class="brand-mark">IslandVista</span> Tours</a>
+    <a class="brand" href="index.html"><span class="brand-mark">mau</span>tours</a>
     <nav class="nav" id="nav">
       <a href="excursions.html" data-i18n="nav_excursions">Excursions</a>
       <a href="transfers.html" data-i18n="nav_transfers">Transfers</a>
@@ -30,7 +30,7 @@
 </header>
 
 <main class="container section">
-  <h1 data-i18n="about_title">About IslandVista</h1>
+  <h1 data-i18n="about_title">About mautours</h1>
   <p data-i18n="about_p1">We’re a Mauritian team crafting small‑group and private experiences since 2015.</p>
   <p data-i18n="about_p2">Sustainable travel: certified partners, reef‑safe guidance, and community‑first itineraries.</p>
   <div class="grid-3 stats">
@@ -60,7 +60,7 @@
       <a class="btn ghost" href="https://wa.me/2300000000" target="_blank" rel="noopener" data-i18n="ft_whatsapp">Chat on WhatsApp</a>
     </div>
   </div>
-  <div class="sub">© 2025 IslandVista Tours • <a href="#" data-i18n="ft_terms">Terms</a> • <a href="#" data-i18n="ft_privacy">Privacy</a></div>
+  <div class="sub">© 2025 mautours • <a href="#" data-i18n="ft_terms">Terms</a> • <a href="#" data-i18n="ft_privacy">Privacy</a></div>
 </footer>
 </body>
 </html>
