--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 <footer class="footer">
   <div class="container grid-3">
     <div>
-      <div class="brand ft"><span class="brand-mark">IslandVista</span> Tours</div>
+      <div class="brand ft"><span class="brand-mark">mau</span>tours</div>
       <p data-i18n="ft_tag">Authentic Mauritius. Seamless booking.</p>
     </div>
     <div>
