--- a/index.html
+++ b/index.html
@@ -61,5 +61,7 @@
   <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">
     💬 Chat on WhatsApp
   </a>
+
+<script defer src="js/main.js"></script>
 </body>
 </html>
