--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mautours – Mauritius Excursions & Transfers</title>
   <link rel="stylesheet" href="css/style.css" />
-  <script defer src="js/main.js"></script>
 </head>
 <body>
   <header class="site-header">
@@ -33,21 +32,21 @@
       <div class="card">
         <img src="assets/ile.jpg" alt="Île aux Cerfs" />
         <h3>Île aux Cerfs Catamaran</h3>
-        <p>Full-day cruise with BBQ lunch.</p>
+        <p>Full-day cruise with BBQ lunch and snorkeling.</p>
         <a href="booking.html?excursion=Île aux Cerfs Catamaran" class="btn">Book Now</a>
       </div>
 
       <div class="card">
         <img src="assets/wildsouth.jpg" alt="Wild South" />
         <h3>Wild South Discovery</h3>
-        <p>Grand Bassin, Chamarel, and more.</p>
+        <p>Grand Bassin, Chamarel, and Seven Coloured Earth.</p>
         <a href="booking.html?excursion=Wild South Discovery" class="btn">Book Now</a>
       </div>
 
       <div class="card">
         <img src="assets/transfer.jpg" alt="Airport Transfer" />
         <h3>Airport Transfer</h3>
-        <p>Private transfers to any hotel in Mauritius.</p>
+        <p>Private transfers anywhere in Mauritius with comfort.</p>
         <a href="booking.html?excursion=Airport Transfer" class="btn">Book Now</a>
       </div>
     </div>
@@ -57,11 +56,7 @@
     <p>© 2025 Mautours | All rights reserved</p>
   </footer>
 
-  <!-- WhatsApp Floating Button -->
-  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">
-    💬 Chat on WhatsApp
-  </a>
-
-<script defer src="js/main.js"></script>
+  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
+  <script defer src="js/main.js"></script>
 </body>
 </html>
