--- a/booking.html
+++ b/booking.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Book Your Excursion | Mautours</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script type="module" src="js/booking.js" defer></script>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header class="site-header">
@@ -17,14 +16,12 @@
   <section class="container form-section">
     <h2>Book Your Excursion</h2>
     <form id="bookingForm">
-      <label>Full Name <input type="text" id="name" required></label>
-      <label>Email <input type="email" id="email" required></label>
-      <label>Phone <input type="text" id="phone" required></label>
-      <label>Excursion
-        <input type="text" id="excursion" readonly>
-      </label>
-      <label>Date <input type="date" id="date" required></label>
-      <label>Number of People <input type="number" id="people" min="1" required></label>
+      <label>Full Name <input type="text" id="name" required /></label>
+      <label>Email <input type="email" id="email" required /></label>
+      <label>Phone <input type="text" id="phone" required /></label>
+      <label>Excursion <input type="text" id="excursion" readonly /></label>
+      <label>Date <input type="date" id="date" required /></label>
+      <label>Number of People <input type="number" id="people" min="1" required /></label>
       <button type="submit" class="btn">Proceed to Payment</button>
     </form>
   </section>
@@ -34,5 +31,6 @@
   </footer>
 
   <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
+  <script type="module" src="js/booking.js" defer></script>
 </body>
 </html>
