--- a/success.html
+++ b/success.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Booking Successful | Mautours</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <div class="container center">
     <h1>🎉 Payment Successful!</h1>
-    <p>Thank you for booking with Mautours.</p>
+    <p>Thank you for booking with <strong>Mautours</strong>.</p>
     <a href="index.html" class="btn">Back to Home</a>
   </div>
 
   <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
+  <script defer src="js/main.js"></script>
 </body>
 </html>
