--- a/login.html
+++ b/login.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login | Mautours</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script type="module" src="js/auth.js" defer></script>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <section class="container form-section">
     <h2>Login or Sign Up</h2>
     <form id="authForm">
-      <label>Email <input type="email" id="authEmail" required></label>
-      <label>Password <input type="password" id="authPassword" required></label>
+      <label>Email <input type="email" id="authEmail" required /></label>
+      <label>Password <input type="password" id="authPassword" required /></label>
       <button id="loginBtn" class="btn">Login</button>
       <button id="signupBtn" class="btn-outline" type="button">Sign Up</button>
     </form>
@@ -23,5 +22,6 @@
   </footer>
 
   <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
+  <script type="module" src="js/auth.js" defer></script>
 </body>
 </html>
