--- a/admin.html
+++ b/admin.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Dashboard | Mautours</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script type="module" src="js/admin.js" defer></script>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header class="site-header">
@@ -19,11 +18,20 @@
     <table id="bookingsTable">
       <thead>
         <tr>
-          <th>Name</th><th>Email</th><th>Excursion</th><th>Date</th><th>People</th><th>Status</th><th>Action</th>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Excursion</th>
+          <th>Date</th>
+          <th>People</th>
+          <th>Status</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody></tbody>
     </table>
   </section>
+
+  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
+  <script type="module" src="js/admin.js" defer></script>
 </body>
 </html>
