--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mautours – Mauritius Excursions & Transfers</title>
   <link rel="stylesheet" href="css/style.css" />
+  <script defer src="js/main.js"></script>
 </head>
 <body>
   <header class="site-header">
-    <div class="container">
+    <div class="container between">
       <h1 class="logo">Mautours</h1>
-      <nav class="nav">
-        <a href="index.html">Home</a>
+      <nav class="nav" id="navMenu">
+        <a href="index.html" class="active">Home</a>
         <a href="booking.html">Book</a>
         <a href="login.html">Login</a>
         <a href="admin.html">Dashboard</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
       </nav>
+      <div class="hamburger" id="hamburger">
+        <span></span><span></span><span></span>
+      </div>
     </div>
   </header>
 
@@ -56,7 +62,6 @@
     <p>© 2025 Mautours | All rights reserved</p>
   </footer>
 
-  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
-  <script defer src="js/main.js"></script>
+  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬</a>
 </body>
 </html>
