--- a/admin.html
+++ b/admin.html
@@ -5,11 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Dashboard | Mautours</title>
   <link rel="stylesheet" href="css/style.css" />
+  <script defer src="js/main.js"></script>
+  <script type="module" src="js/admin.js" defer></script>
 </head>
 <body>
   <header class="site-header">
-    <div class="container">
-      <h1 class="logo">Mautours Dashboard</h1>
+    <div class="container between">
+      <h1 class="logo">Mautours</h1>
+      <nav class="nav" id="navMenu">
+        <a href="index.html">Home</a>
+        <a href="booking.html">Book</a>
+        <a href="login.html">Login</a>
+        <a href="admin.html" class="active">Dashboard</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+      <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
     </div>
   </header>
 
@@ -31,7 +42,6 @@
     </table>
   </section>
 
-  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬 Chat on WhatsApp</a>
-  <script type="module" src="js/admin.js" defer></script>
+  <a href="https://wa.me/23052542792" target="_blank" class="whatsapp-btn">💬</a>
 </body>
 </html>
