--- a/index.html
+++ b/index.html
@@ -39,21 +39,24 @@
         <img src="assets/ile.jpg" alt="Île aux Cerfs" />
         <h3>Île aux Cerfs Catamaran</h3>
         <p>Full-day cruise with BBQ lunch and snorkeling.</p>
-        <a href="booking.html?excursion=Île aux Cerfs Catamaran" class="btn">Book Now</a>
+        <span class="price">MUR 1000</span>
+        <a href="booking.html?excursion=Île aux Cerfs Catamaran&price=1000" class="btn">Book Now</a>
       </div>
 
       <div class="card">
         <img src="assets/wildsouth.jpg" alt="Wild South" />
         <h3>Wild South Discovery</h3>
         <p>Grand Bassin, Chamarel, and Seven Coloured Earth.</p>
-        <a href="booking.html?excursion=Wild South Discovery" class="btn">Book Now</a>
+        <span class="price">MUR 1500</span>
+        <a href="booking.html?excursion=Wild South Discovery&price=1500" class="btn">Book Now</a>
       </div>
 
       <div class="card">
         <img src="assets/transfer.jpg" alt="Airport Transfer" />
         <h3>Airport Transfer</h3>
         <p>Private transfers anywhere in Mauritius with comfort.</p>
-        <a href="booking.html?excursion=Airport Transfer" class="btn">Book Now</a>
+        <span class="price">MUR 800</span>
+        <a href="booking.html?excursion=Airport Transfer&price=800" class="btn">Book Now</a>
       </div>
     </div>
   </section>
