--- a/booking.html
+++ b/booking.html
@@ -31,6 +31,7 @@
       <label>Email <input type="email" id="email" required /></label>
       <label>Phone <input type="text" id="phone" required /></label>
       <label>Excursion <input type="text" id="excursion" readonly /></label>
+      <label>Price (MUR) <input type="text" id="price" readonly /></label>
       <label>Date <input type="date" id="date" required /></label>
       <label>Number of People <input type="number" id="people" min="1" required /></label>
       <button type="submit" class="btn">Proceed to Payment</button>
