--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
       <h1 class="logo">Mautours</h1>
       <nav class="nav" id="navMenu">
         <a href="index.html" class="active">Home</a>
-        <a href="booking.html">Book</a>
+        <a href="#excursions">Book</a>
         <a href="login.html">Login</a>
         <a href="admin.html">Dashboard</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
       </nav>
-      <div class="hamburger" id="hamburger">
-        <span></span><span></span><span></span>
-      </div>
+      <div class="hamburger" id="hamburger"><span></span><span></span><span></span></div>
     </div>
   </header>
 
@@ -32,7 +30,7 @@
     </div>
   </section>
 
-  <section class="excursions container">
+  <section id="excursions" class="excursions container">
     <h2>Popular Excursions</h2>
     <div class="cards">
       <div class="card">
